app/src/main/java/com/example/movietheatre/core/domain/util/error/PasswordError.kt
package com.example.movietheatre.core.domain.util.error

enum class PasswordError : RootError {
    SHORT_PASSWORD,
    INVALID_PASSWORD,
}